alignment fixes

--- a/app/assets/stylesheets/reports.sass
+++ b/app/assets/stylesheets/reports.sass
@@ -518,7 +518,7 @@ body
   .competency_report
     .competency_container
       border: 3px solid #ff8308
-      padding-bottom: 15px
+      padding-bottom: 10px
     .inner
       margin-top: 90px
       .scale
@@ -544,9 +544,9 @@ body
     .competency-description
       font-size: 15px
       line-height: 24px
-      padding: 15px 15px 15px 170px
+      padding: 0px 15px 0px 170px
       background: image-url('report/competency-description-icon.png') 0 center no-repeat
-      margin:  25px 
+      margin:  20px 25px 20px 25px
     .instruction_container
       .instructions  
         [class*=instruction]
@@ -597,7 +597,7 @@ body
         font-weight: normal
         font-size: 90%
   .factor-block
-    margin: 15px 15px 0 15px
+    margin: 5px 15px 0 15px
     .factor-header
       background: #f5f7f8
       font-size: 18.40px
